# lay_summarisation

./: .gitignore  Makefile  README.md  TODO.md  justfile  pyproject.toml  requirements.txt
data/: .gitignore
jobs/: clinicalT5.sh  fine_tune_clinicalbert.sh  fine_tune_longformer.sh  gpt2.sh  jupyter.sh  process_lex.sh  process_rouge.sh  run_demo.sh  setup_all.sh  setup_env.sh  test_script.sh  update_env.sh
laysummarisation/: config.py  metric.py  preprocess.py  utils.py
laysummarisation/common/: parser_config.py
laysummarisation/evaluator/: metric.py
laysummarisation/inference/: clinical_longformer.py  extractor_model.py  gpt2.py
laysummarisation/loader/: dataloader.py  elife.py  prepare.py
laysummarisation/model/: clinicalT5.py  clinical_longformer.py  extractor_model.py  gpt2.py  longformer_helper.py  train.py
laysummarisation/process/: binary_sentences.py  greedy_rouge.py  lexrank.py  rouge.py
laysummarisation/trainer/: base_trainer.py  train.py
notebooks/: GPT2_Tuning.ipynb  Longformer_Tuning.ipynb  clinical_longformer.ipynb  dataset.ipynb  pathtest.ipynb
report/: Makefile  acl.sty  custom.bib  report.md  report.tex
scripts/: fine_tune_longformer.sh  init_all.sh  prep_data.sh  prep_weights.sh  prepare.sh  process_all.sh  process_binary_sentences.sh  process_lex.sh  process_lexrank.sh  process_rouge.sh  run_demo.sh  setup_all.sh  setup_cllf.sh  setup_data.sh  setup_preprocess_all.sh  setup_weights.sh  update_deps.sh
scripts/data/: binary_sentences.sh  elife.sh  elife_rouge.sh  lexrank.sh  plos.sh  process.sh  rouge.sh
scripts/train/: all.sh  clinicalT5.sh  clinicalbert.sh  clinicallf.sh  cllf_elife.sh  cllf_plos.sh  elife.sh  gpt2.sh  gpt_elife.sh  gpt_plos.sh  lf_elife.sh  lf_plos.sh  plos.sh  train_cllf.sh  tune.sh
streamlit/: LaySum_Demo.py
streamlit/pages/: LaySum_Evaluation.py
tests/: rouge_test.py
utils/: utils.py
