[tool.poetry]
name = "laysummarisation"
version = "0.1.0"
description = ""
authors = [
  "Ahmed Soliman <unknown@unknown.com>",
  "Marc Wenzlawski <marc.wenzlawski@outlook.de>",
  "Vladislav Yotkov <vladislav.yotkov7@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.26.1"
pandas = "^1.5.3"
datasets = "^2.11.0"
torch = "1.11.0"
rouge = "^1.0.1"
nltk = "^3.8.1"
pandarallel = "^1.6.4"
sumy = "^0.11.0"
evaluate = "^0.4.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.21.3"
matplotlib = "^3.7.1"
sacremoses = "^0.0.53"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]
