[tool.poetry]
name = "laysummarisation"
version = "0.1.0"
description = ""
authors = [
  "Ahmed Soliman <unknown@unknown.com>",
  "Marc Wenzlawski <marc.wenzlawski@outlook.de>",
  "Vladislav Yotkov <vladislav.yotkov7@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8, !=3.9.7"
transformers = "^4.26.1"
pandas = "^1.5.3"
datasets = "^2.11.0"
torch = "1.11.0"
rouge = "^1.0.1"
nltk = "^3.8.1"
pandarallel = "^1.6.4"
sumy = "^0.11.0"
evaluate = "^0.4.0"
rouge-score = "^0.1.2"
pycm = "^3.8"
wandb = "^0.15.0"
tqdm = "^4.65.0"
py-readability-metrics = "^1.4.5"
scikit-learn = "^1.2.2"
streamlit = "^1.21.0"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipykernel = "^6.21.3"
matplotlib = "^3.7.1"
sacremoses = "^0.0.53"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
watchdog = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]

[tool.ruff.per-file-ignores]
"demo.py" = ["F401"]
"uber.py" = ["F401"]

[tool.black]
line-length = 79
